k8s/base/webhook/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: resource-request-validator
webhooks:
- name: validate.resources.devops-case
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Fail
  clientConfig:
    service:
      name: webhook-service
      namespace: default
      path: "/validate"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnakNDQW1xZ0F3SUJBZ0lVY2dxNS8wSTduRzZUamVhMDZyK3phZXo4MGVjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pqRWtNQ0lHQTFVRUF3d2JkMlZpYUc5dmF5MXpaWEoyYVdObExtUmxabUYxYkhRdWMzWmpNQjRYRFRJMgpNRFV4TlRFMU1UTTFNVm9YRFRJM01EVXhOVEUxTVRNMU1Wb3dKakVrTUNJR0ExVUVBd3diZDJWaWFHOXZheTF6ClpYSjJhV05sTG1SbFptRjFiSFF1YzNaak1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0MKQVFFQXlNbys1VDV0ZlJuOSs3NWxuemtXVVZmSlQ5UHRwWCs3Y3ZNaGc1V0VmVE9oNlkzYk9zQm9hM1Z5T3ZjNApQNnB1cGlPaERCb [...]
  rules:
  - apiGroups: ["apps"]
    apiVersions: ["v1"]
    operations: ["CREATE", "UPDATE"]
    resources: ["deployments"]
  namespaceSelector:
    matchLabels:
      validate-resources: "true"
